# hardware_rockchip_libmpp

./: .gitignore  Android.bp  CHANGELOG.md  CMakeLists.txt  Makefile  SECURITY.md  merge_static_lib.bat  merge_static_lib.sh  readme.txt  version.mk  version.sh
kmpp/: CMakeLists.txt  Makefile  kmpp.c  kmpp_vdec.c  kmpp_venc.c
kmpp/base/: CMakeLists.txt  kmpp_buffer.c  kmpp_frame.c  kmpp_ioc.c  kmpp_meta.c  kmpp_obj.c  kmpp_packet.c  kmpp_vdec_cfg.c  kmpp_venc_cfg.c
kmpp/base/inc/: kmpp_buffer.h  kmpp_buffer_impl.h  kmpp_frame.h  kmpp_frame_impl.h  kmpp_ioc.h  kmpp_meta.h  kmpp_meta_impl.h  kmpp_obj.h  kmpp_obj_func.h  kmpp_obj_helper.h  kmpp_obj_impl.h  kmpp_obj_macro.h  kmpp_packet.h  kmpp_packet_impl.h
kmpp/base/test/: CMakeLists.txt  kmpp_buffer_test.c  kmpp_frame_test.c  kmpp_meta_test.c  kmpp_obj_test.c
kmpp/inc/: kmpp.h  kmpp_frame.h  kmpp_meta.h  kmpp_packet.h  kmpp_vdec.h  kmpp_venc.h  kmpp_venc_objs.h  kmpp_vsp_objs.h
kmpp/objs/: kmpp_buffer.c  kmpp_frame.c  kmpp_meta.c  kmpp_packet.c  kmpp_venc_objs.c  kmpp_vsp_objs.c
kmpp/objs/inc/: kmpp_buffer.h  kmpp_buffer_impl.h  kmpp_frame_impl.h  kmpp_meta_impl.h  kmpp_packet_impl.h  kmpp_venc_objs_impl.h  kmpp_vsp_objs_impl.h
kmpp/test/: CMakeLists.txt  kmpp_vdec_test.c  kmpp_venc_test.c
kmpp/vsp/: kmpi_vsp.c  kmpp_vsp.c
kmpp/vsp/inc/: kmpp_vsp.h  kmpp_vsp_impl.h
mpp/: CMakeLists.txt  Makefile  codecs.cmake  kmpp.c  mpi.c  mpp.c  mpp.cpp  mpp_common.c  mpp_common.h  mpp_debug.h  mpp_impl.c  mpp_impl.cpp  mpp_info.c  mpp_iommu.c  mpp_iommu.h  mpp_make.cfg  mpp_osal.h  mpp_rkvenc2.c  mpp_rkvenc_500.c  mpp_rkvenc_540c.c  mpp_rkvenc_pp.c  mpp_service.c  mpp_sys.c  soc.cmake  vproc.cmake
mpp/base/: CMakeLists.txt  kmpp_obj.c  mpp_bitread.c  mpp_buf_slot.c  mpp_buf_slot.cpp  mpp_buffer.c  mpp_buffer_impl.c  mpp_buffer_impl.cpp  mpp_cfg.c  mpp_cfg_io.c  mpp_cluster.c  mpp_cluster.cpp  mpp_dec_cfg.c  mpp_dec_cfg.cpp  mpp_dec_hdr_meta.c  mpp_enc_args.c  mpp_enc_cfg.c  mpp_enc_cfg.cpp  mpp_enc_ref.c  mpp_enc_refs.c  mpp_enc_refs.cpp  mpp_frame.c  mpp_frame.cpp  mpp_meta.c  mpp_meta.cpp  mpp_packet.c  mpp_packet.cpp  mpp_sys_cfg.c  mpp_sys_cfg.cpp  mpp_sys_cfg_st.c  mpp_task.c  mpp_task_impl.c  mpp_task_impl.cpp  mpp_trie.c
mpp/base/inc/: kmpp_obj.h  mpp_2str.h  mpp_bitput.h  mpp_bitread.h  mpp_bitwrite.h  mpp_buf_slot.h  (+15 more)
mpp/codec/: CMakeLists.txt  enc_impl.c  mpp_dec.c  mpp_dec.cpp  mpp_dec_debug.h  mpp_dec_no_thread.c  mpp_dec_no_thread.cpp  mpp_dec_normal.c  mpp_dec_normal.cpp  mpp_enc_debug.h  mpp_enc_impl.c  mpp_enc_impl.cpp  mpp_enc_v2.c  mpp_enc_v2.cpp  mpp_parser.c  mpp_rc.c  mpp_rc.cpp
mpp/common/: av1d_common.h  av1d_syntax.h  avs2d_syntax.h  avsd_syntax.h  dxva_syntax.h  h263d_syntax.h  h264_syntax.h  h264d_syntax.h  h264e_syntax.h  h265_syntax.h  h265d_syntax.h  h265e_syntax.h  h265e_syntax_new.h  jpegd_syntax.h  jpege_syntax.h  m2vd_syntax.h  mpg4d_syntax.h  vp8d_syntax.h  vp8e_syntax.h  vp9d_syntax.h
mpp/hal/: CMakeLists.txt  hal_task.c  mpp_enc_hal.c  mpp_hal.c
mpp/inc/: mpi_impl.h  mpp.h  mpp_cfg.h  mpp_dec_cfg.h  mpp_enc_cfg.h  mpp_impl.h  mpp_info.h  mpp_internal.h  mpp_sys.h
mpp/legacy/: CMakeLists.txt  rk_list.h  vpu_api_legacy.cpp  vpu_api_legacy.h  vpu_api_mlvec.h  vpu_mem_legacy.c
mpp/vproc/: CMakeLists.txt  mpp_dec_vproc.c  mpp_dec_vproc.cpp  mpp_vproc_dev.c
osal/: CMakeLists.txt  Makefile  kmpp_allocator.c  kmpp_allocator_impl.h  kmpp_atomic.c  kmpp_bitops.c  kmpp_cfg.c  kmpp_clk.c  kmpp_clk_impl.h  kmpp_cls.c  kmpp_completion.c  kmpp_delay.c  kmpp_dev.c  kmpp_dev_impl.h  kmpp_dmabuf.c  kmpp_dmaheap.c  kmpp_dmaheap_impl.h  kmpp_env.c  kmpp_file.c  kmpp_fs.c  kmpp_io.c  kmpp_log.c  kmpp_mem.c  kmpp_mutex.c  kmpp_obj.c  kmpp_osal.c  kmpp_pm.c  kmpp_rwsem.c  kmpp_sema.c  kmpp_spinlock.c  kmpp_sthd.c  kmpp_string.c  kmpp_thread.c  kmpp_time.c  kmpp_trie.c  kmpp_uaccess.c  kmpp_wait.c  mpp_allocator.c  mpp_allocator_api.h  mpp_callback.c  (+20 more)
osal/allocator/: allocator_dma_heap.c  allocator_dma_heap.h  allocator_drm.c  allocator_drm.h  allocator_ext_dma.c  allocator_ext_dma.h  allocator_ion.c  allocator_ion.h  allocator_std.c  allocator_std.h  ion.h
osal/android/: os_env.c  os_log.c  os_mem.c
osal/driver/: mpp_device.c  mpp_server.c  mpp_service.c  vcodec_service.c
osal/inc/: kmpp_allocator.h  kmpp_atomic.h  kmpp_bitops.h  kmpp_cfg.h  kmpp_cfg_impl.h  kmpp_clk.h  kmpp_cls.h  kmpp_completion.h  kmpp_delay.h  kmpp_dev.h  kmpp_dmabuf.h  kmpp_dmaheap.h  kmpp_env.h  kmpp_file.h  kmpp_fs.h  kmpp_idef_end.h  kmpp_io.h  kmpp_log.h  kmpp_macro.h  kmpp_mem.h  kmpp_mutex.h  kmpp_obj.h  kmpp_obj_helper.h  kmpp_obj_impl.h  kmpp_osal.h  kmpp_pm.h  kmpp_rwsem.h  kmpp_sema.h  kmpp_spinlock.h  kmpp_sthd.h  kmpp_string.h  kmpp_thread.h  kmpp_time.h  kmpp_trie.h  kmpp_uaccess.h  kmpp_wait.h  mpp_allocator.h  mpp_callback.h  mpp_common.h  mpp_compat_impl.h  (+19 more)
osal/linux/: os_env.c  os_log.cpp  os_mem.c
osal/test/: CMakeLists.txt  mpp_dmabuf_test.c  mpp_env_test.c  mpp_eventfd_test.c  mpp_log_test.c  mpp_mem_pool_test.c  mpp_mem_test.c  mpp_platform_test.c  mpp_ring_test.c  mpp_runtime_test.c  mpp_thread_test.c  mpp_time_test.c  mpp_trace_test.c
test/: CMakeLists.txt  Makefile  mpi_dec_mt_test.c  mpi_dec_multi_test.c  mpi_dec_nt_test.c  mpi_dec_test.c  mpi_enc_mt_test.c  mpi_enc_mt_test.cpp  mpi_enc_test.c  mpi_rc2_test.c  mpp_event_trigger.h  mpp_info_test.c  mpp_parse_cfg.h
test/kmpi_enc_chan_test/: CMakeLists.txt  Makefile  kmpi_enc_chan_test.c
test/kmpi_enc_test/: CMakeLists.txt  Makefile  kmpi_enc_test.c
test/kmpi_vsp_test/: CMakeLists.txt  Makefile  kmpi_vsp_test.c
test/kmpp_enc_test/: CMakeLists.txt  Makefile  kmpp_enc_test.c
test/kmpp_test/: CMakeLists.txt  Makefile  kmpp_test.c
test/osal_test/: CMakeLists.txt  Makefile  osal_test.c
test/stub_test/: CMakeLists.txt  Makefile  kmpi_venc_stub.h  kmpi_vsp_stub.h  kmpp_buffer_stub.h  kmpp_frame_stub.h  kmpp_meta_stub.h  kmpp_obj_func_stub.h  kmpp_obj_stub.h  kmpp_stub.h  kmpp_sym_stub.h  kmpp_venc_objs_stub.h  kmpp_vsp_objs_stub.h  mpp_buffer_stub.h  rk_export_func_stub.h  stub_test.c
test/sym_test/: CMakeLists.txt  sym_test.h
(+934 files in other folders)
